--- a/manage-member.html
+++ b/manage-member.html
@@ -119,12 +119,13 @@
     }
 
         /* Sidebar */
+    /* Sidebar */
     .admin-sidebar {
       width: 250px;
       background-color: var(--brown);
       color: var(--white);
       padding: 20px 0;
-      position: fixed;
+      position: fixed;  
       height: calc(100vh - 80px);
       top: 80px;
       transition: all 0.3s;
@@ -148,13 +149,14 @@
       color: var(--white);
       text-decoration: none;
       transition: all 0.3s;
+      font-size: 1rem;
     }
 
     .sidebar-menu a:hover, .sidebar-menu a.active {
       background-color: rgba(255, 255, 255, 0.1);
     }
 
-    .sidebar-menu i {
+    .sidebar-menu a i {
       margin-right: 10px;
       font-size: 1.1rem;
     }
@@ -175,7 +177,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 8px;
     }
     
     .page-title h2 {
@@ -330,7 +332,7 @@
       }
 
       .admin-content, .admin-footer {
-        margin-left: 80px;
+        margin-left: 60px;
       }
 
       .sidebar-menu .menu-text {
