--- a/manage-staff.html
+++ b/manage-staff.html
@@ -177,12 +177,13 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
     }
 
     .management-header h2 {
       font-size: 1.8rem;
       color: var(--brown);
+      margin-bottom: 5px;
     }
 
     .management-header button {
@@ -330,6 +331,7 @@
         align-items: center;
         gap: 20px;
         margin-bottom: 15px;
+        margin-top: 0;
       }
 
       .action-buttons{
