--- a/manage-member.html
+++ b/manage-member.html
@@ -400,53 +400,18 @@
 
   <!-- Admin Container -->
   <div class="admin-container">
-    <!-- Sidebar -->
-    <aside class="admin-sidebar">
-      <ul class="sidebar-menu">
-        <li>
-          <a href="admin-dashboard.html">
-            <i class="fas fa-tachometer-alt"></i>
-            <span class="menu-text">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="manage-staff.html">
-            <i class="fas fa-user-tie"></i>
-            <span class="menu-text">Manage Staff</span>
-          </a>
-        </li>
-        <li>
-          <a href="manage-member.html" class="active">
-            <i class="fas fa-users"></i>
-            <span class="menu-text">Manage Members</span>
-          </a>
-        </li>
-        <li>
-          <a href="manage-categories.html">
-            <i class="fas fa-tags"></i>
-            <span class="menu-text">Categories</span>
-          </a>
-        </li>
-        <li>
-          <a href="manage-product.html">
-            <i class="fas fa-utensils"></i>
-            <span class="menu-text">Products</span>
-          </a>
-        </li>
-        <li>
-          <a href="manage-orders.html">
-            <i class="fas fa-shopping-basket"></i>
-            <span class="menu-text">Orders</span>
-          </a>
-        </li>
-        <li>
-          <a href="sales-reports.html">
-            <i class="fas fa-chart-line"></i>
-            <span class="menu-text">Sales Reports</span>
-          </a>
-        </li>
-      </ul>
-    </aside>
+     <!-- Sidebar -->
+  <aside class="admin-sidebar">
+    <ul class="sidebar-menu">
+      <li><a href="admin-dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+      <li><a href="manage-staff.html"><i class="fas fa-user-tie"></i> Manage Staff</a></li>
+      <li><a href="manage-member.html"><i class="fas fa-users"></i> Manage Members</a></li>
+      <li><a href="manage-categories.html"><i class="fas fa-tags"></i> Categories</a></li>
+      <li><a href="manage-product.html"><i class="fas fa-utensils"></i> Products</a></li>
+      <li><a href="manage-orders.html"><i class="fas fa-shopping-basket"></i> Orders</a></li>
+      <li><a href="sales-reports.html"><i class="fas fa-chart-line"></i> Sales Reports</a></li>
+    </ul>
+  </aside>
     
     <!-- Main Content -->
     <main class="admin-content">
