--- a/manage-product.html
+++ b/manage-product.html
@@ -262,12 +262,13 @@
 
   <aside class="admin-sidebar">
     <ul class="sidebar-menu">
-      <li><a href="admin-dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+      <li><a href="admin-dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
       <li><a href="manage-staff.html"><i class="fas fa-user-tie"></i> Manage Staff</a></li>
       <li><a href="manage-member.html"><i class="fas fa-users"></i> Manage Members</a></li>
       <li><a href="manage-categories.html"><i class="fas fa-tags"></i> Categories</a></li>
-      <li><a href="manage-product.html" class="active"><i class="fas fa-utensils"></i> Products</a></li>
+      <li><a href="manage-product.html"><i class="fas fa-utensils"></i> Products</a></li>
       <li><a href="manage-orders.html"><i class="fas fa-shopping-basket"></i> Orders</a></li>
+      <li><a href="sales-reports.html"><i class="fas fa-chart-line"></i> Sales Reports</a></li>
     </ul>
   </aside>
 
@@ -308,10 +309,10 @@
         <tbody>
           <tr>
             <td>PR001</td>
-            <td>Chocolate Cake</td>
+            <td>Chocolate Indulgence</td>
             <td>Cakes</td>
-            <td>$25.00</td>
-            <td>30</td>
+            <td>RM 80</td>
+            <td>10</td>
             <td><span class="badge badge-success">Available</span></td>
             <td>
               <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
@@ -320,10 +321,58 @@
           </tr>
           <tr>
             <td>PR002</td>
-            <td>Sourdough Bread</td>
+            <td>Classic Cheesecake</td>
+            <td>Cakes</td>
+            <td>RM 90</td>
+            <td>10</td>
+            <td><span class="badge badge-success">Available</span></td>
+            <td>
+              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
+              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>PR003</td>
+            <td>Pandan Gula Melaka</td>
+            <td>Cakes</td>
+            <td>RM 85</td>
+            <td>10</td>
+            <td><span class="badge badge-success">Available</span></td>
+            <td>
+              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
+              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>PR004</td>
+            <td>Red Velvet Delight</td>
+            <td>Cakes</td>
+            <td>RM 95</td>
+            <td>10</td>
+            <td><span class="badge badge-success">Available</span></td>
+            <td>
+              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
+              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>PR005</td>
+            <td>Egg Tarts</td>
+            <td>Desserts</td>
+            <td>RM 28</td>
+            <td>10</td>
+            <td><span class="badge badge-success">Available</span></td>
+            <td>
+              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
+              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
+            </td>
+          </tr>
+           <tr>
+            <td>PR006</td>
+            <td>Mango Mousse bread</td>
             <td>Breads</td>
-            <td>$10.00</td>
-            <td>12</td>
+            <td>RM 38</td>
+            <td>10</td>
             <td><span class="badge badge-success">Available</span></td>
             <td>
               <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
