--- a/manage-categories.html
+++ b/manage-categories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BakeEase - Manage Products</title>
+  <title>BakeEase - Manage Categories</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
@@ -32,6 +32,7 @@
       margin-top: 20px;
     }
 
+    /* Header Styles */
     .admin-header {
       background-color: var(--white);
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -66,10 +67,16 @@
       font-size: 0.9rem;
     }
 
+    .admin-nav {
+      display: flex;
+      align-items: center;
+    }
+
     .admin-nav .profile {
       display: flex;
       align-items: center;
       cursor: pointer;
+      position: relative;
     }
 
     .admin-nav .profile img {
@@ -79,13 +86,17 @@
       margin-right: 10px;
     }
 
-/* Sidebar */
+    .admin-nav .profile-name {
+      font-weight: 600;
+    }
+
+    /* Sidebar */
     .admin-sidebar {
       width: 250px;
       background-color: var(--brown);
       color: var(--white);
       padding: 20px 0;
-      position: fixed;  
+      position: fixed;
       height: calc(100vh - 80px);
       top: 80px;
       transition: all 0.3s;
@@ -109,14 +120,13 @@
       color: var(--white);
       text-decoration: none;
       transition: all 0.3s;
-      font-size: 1rem;
     }
 
     .sidebar-menu a:hover, .sidebar-menu a.active {
       background-color: rgba(255, 255, 255, 0.1);
     }
 
-    .sidebar-menu a i {
+    .sidebar-menu i {
       margin-right: 10px;
       font-size: 1.1rem;
     }
@@ -125,67 +135,33 @@
       font-size: 0.95rem;
     }
 
+    /* Main Content */
     .admin-content {
       flex: 1;
       padding: 30px;
       margin-left: 250px;
-      padding-top: 100px;
+      padding-top: 80px;  
     }
 
     .management-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .management-header h2 {
       font-size: 1.8rem;
       color: var(--brown);
+      margin-bottom: 5px;
     }
 
-    .management-header button {
-      font-size: 1rem;
-      padding: 10px 15px;
-      background-color: var(--primary);
-      color: var(--white);
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .management-header button:hover {
-      background-color: var(--primary-dark);
-    }
-
-    .search-filter {
+    /* Filter Dropdown and Add Category Button */
+    .filter-dropdown {
       display: flex;
       align-items: center;
-      gap: 20px;
       margin-bottom: 15px;
-      margin-top: 0;
-    }
-
-    .search-box {
-      position: relative;
-      flex: 1;
-      max-width: 400px;
-    }
-
-    .search-box i {
-      position: absolute;
-      left: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      color: var(--dark-gray);
-    }
-
-    .search-box input {
-      width: 100%;
-      padding: 10px 12px 10px 36px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
+      gap: 20px;
     }
 
     .filter-dropdown select {
@@ -193,23 +169,34 @@
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 5px;
+      background-color: var(--white);
+      cursor: pointer;
+      transition: border-color 0.3s ease;
+      min-width: 160px;
     }
 
-    .action-buttons {
-      margin-left: auto;
+    .filter-dropdown select:hover,
+    .filter-dropdown select:focus {
+      border-color: var(--primary);
+      outline: none;
+      box-shadow: 0 0 5px var(--primary);
     }
 
-    .action-buttons button{
+    .filter-dropdown button {
       font-size: 1rem;
-        padding: 10px 15px;
-        background-color: var(--primary);
-        color: var(--white);
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
+      padding: 10px 15px;
+      background-color: var(--primary);
+      color: var(--white);
+      border: none; 
+      cursor: pointer;
+      border-radius: 5px;
     }
 
+    .filter-dropdown button:hover {
+      background-color: var(--primary-dark);
+    }
+
+    /* Table Styles */
     .table-responsive {
       overflow-x: auto;
     }
@@ -231,25 +218,8 @@
       color: white;
     }
 
-    .badge {
-      padding: 5px 10px;
-      border-radius: 20px;
-      font-size: 0.8rem;
-      font-weight: 500;
-    }
-
-    .badge-success {
-      background-color: #e6f7ee;
-      color: #2ecc71;
-    }
-
-    .badge-danger {
-      background-color: #ffebee;
-      color: #e74c3c;
-    }
-
     .action-btn {
-      background-color: #e67e22; /* match staff table button color */
+      background-color: #e67e22; 
       color: white;
       border: none;
       padding: 8px 16px;
@@ -262,6 +232,28 @@
 
     .member-action-btn:hover {
       background-color: var(--primary-dark);
+    }
+
+    .badge {
+      padding: 5px 10px;
+      border-radius: 20px;
+      font-size: 0.8rem;
+      font-weight: 500;
+    }
+
+    .badge-success {
+      background-color: #e6f7ee;
+      color: #2ecc71;
+    }
+
+    .badge-warning {
+      background-color: #fff4e5;
+      color: #e67e22;
+    }
+
+    .badge-danger {
+      background-color: #ffebee;
+      color: #e74c3c;
     }
 
     .btn-logout {
@@ -295,10 +287,10 @@
       border-top: 1px solid #eee;
       margin-left: 250px;
     }
-
   </style>
 </head>
 <body>
+  <!-- Admin Header -->
   <header class="admin-header">
     <div class="logo-container">
       <img src="images/logo.png" alt="BakeEase Logo">
@@ -314,6 +306,7 @@
       </button>
   </header>
 
+  <!-- Sidebar -->
   <aside class="admin-sidebar">
     <ul class="sidebar-menu">
       <li><a href="admin-dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
@@ -326,110 +319,59 @@
     </ul>
   </aside>
 
+  <!-- Main Content -->
   <main class="admin-content">
     <div class="management-header">
-      <h2>Products Management</h2>
-    </div>
-
-    <div class="search-filter">
-      <div class="search-box">
-        <i class="fas fa-search"></i>
-        <input type="text" placeholder="Search products...">
-      </div>
-      <div class="filter-dropdown">
-        <select>
-          <option>All Categories</option>
-          <option>Cakes</option>
-          <option>Breads</option>
-          <option>Pastries</option>
-        </select>
-      </div>
-      <div class="action-buttons">
-        <button><i class="fas fa-plus"></i> Add Product</button>
+      <div class="page-title">
+        <h2>Categories Management </h2>
       </div>
     </div>
 
+    <!-- Category Filter Dropdown with Add Category Button -->
+    <div class="filter-dropdown">
+      <select>
+        <option>All Categories</option>
+        <option>Cakes</option>
+        <option>Breads</option>
+        <option>Pastries</option>
+      </select>
+      <button><i class="fas fa-plus"></i> Add Category</button>
+    </div>
+
+    <!-- Categories Table -->
     <div class="table-responsive">
       <table>
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Price</th>
-            <th>Stock</th>
-            <th>Status</th>
+            <th>Category ID</th>
+            <th>Category Name</th>
+            <th>Description</th>
             <th>Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>PR001</td>
-            <td>Chocolate Indulgence</td>
+            <td>C001</td>
             <td>Cakes</td>
-            <td>RM 80</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
+            <td>Tasty Cakes</td>
             <td>
               <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
               <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
             </td>
           </tr>
           <tr>
-            <td>PR002</td>
-            <td>Classic Cheesecake</td>
-            <td>Cakes</td>
-            <td>RM 90</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
-            <td>
-              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
-              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>PR003</td>
-            <td>Pandan Gula Melaka</td>
-            <td>Cakes</td>
-            <td>RM 85</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
-            <td>
-              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
-              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>PR004</td>
-            <td>Red Velvet Delight</td>
-            <td>Cakes</td>
-            <td>RM 95</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
-            <td>
-              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
-              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
-            </td>
-          </tr>
-          <tr>
-            <td>PR005</td>
-            <td>Egg Tarts</td>
-            <td>Pastries</td>
-            <td>RM 28</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
-            <td>
-              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
-              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
-            </td>
-          </tr>
-           <tr>
-            <td>PR006</td>
-            <td>Mango Mousse bread</td>
+            <td>C002</td>
             <td>Breads</td>
-            <td>RM 38</td>
-            <td>10</td>
-            <td><span class="badge badge-success">Available</span></td>
+            <td>Scented Breads</td>
+            <td>
+              <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
+              <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
+            </td>
+          </tr>
+          <tr>
+            <td>C003</td>
+            <td>Pastries</td>
+            <td>Delicious pastries</td>
             <td>
               <button class="action-btn"><i class="fas fa-edit"></i> Edit</button>
               <button class="action-btn"><i class="fas fa-trash"></i> Delete</button>
@@ -441,8 +383,7 @@
   </main>
   <!-- Footer -->
   <footer class="admin-footer">
-    <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
+    &copy; 2025 BakeEase Bakery. All Rights Reserved.
   </footer>
 </body>
 </html>
-
