--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -436,7 +436,7 @@
       <img src="images/logo.png" alt="BakeEase Logo">
       <div class="logo-text">
         <h1>BakeEase</h1>
-        <span>Admin Dashboard</span>
+        <span>Admin </span>
       </div>
     </div>
     <nav class="admin-nav">
