--- a/confirmation.html
+++ b/confirmation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="icon" type="image/png" href="images/logo.png" />
   <title>Order Confirmation - BakeEase</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
