--- a/confirmation.html
+++ b/confirmation.html
@@ -128,9 +128,9 @@
     .cart-steps::after {
       content: "";
       position: absolute;
-      top: 34px;
-      left: 0;
-      right: calc(33.33% - 15px);
+      top: 15px;
+      left: 30px;
+      right: 40px;
       height: 2px;
       background-color: #ddd;
       z-index: 1;
@@ -140,7 +140,6 @@
       text-align: center;
       position: relative;
       z-index: 2;
-      width: 100px;
     }
     
     .step-number {
