--- a/manage-staff.html
+++ b/manage-staff.html
@@ -374,9 +374,11 @@
         </select>
       </div>
       <div class="action-buttons">
-        <button onclick="openModal('addStaffModal')">
-          <i class="fas fa-plus"></i> Add Staff
-        </button>
+        <a href="add-admin.html" class="button-link">
+            <button onclick="openModal('addStaffModal')">
+                <i class="fas fa-plus"></i> Add Staff
+            </button>
+        </a>
       </div>
     </div>
 
