--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </article>
 
     <article>
-      <img src="images/zunyi.jpg" alt="Member 2 Photo" />
+      <img src="images/zunyi.jpeg" alt="Member 2 Photo" />
       <h3>CHAN ZUN YI</h3>
       <p>UI/UX Designer (Customer Role)</p>
       <p>Student ID: 1231201459</p>
