--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
   <header>
     <div class="header-bar">
       <!-- Logo only -->
-      <div class="logo-left">
+      <div class="">
       <a href="index.html">
         <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
         <h1 id="page-heading">Login</h1>
