--- a/manage-product.html
+++ b/manage-product.html
@@ -343,7 +343,7 @@
   <aside class="admin-sidebar">
     <ul class="sidebar-menu">
       <li><a href="admin-dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-      <li><a href="manage-staff.html"><i class="fas fa-user-tie"></i> Manage Staff</a></li>
+      <li><a href="manage-staff.php"><i class="fas fa-user-tie"></i> Manage Staff</a></li>
       <li><a href="manage-member.html"><i class="fas fa-users"></i> Manage Members</a></li>
       <li><a href="manage-categories.html"><i class="fas fa-tags"></i> Categories</a></li>
       <li><a href="manage-product.html" class="active"><i class="fas fa-utensils"></i> Products</a></li>
