--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span class="nav-toggle" id="navToggle">☰</span>
         <div class="dropdown-menu" id="navMenu">
           <a href="index.html">Home</a>
-          <a href="products.html">Products</a>
+          <a href="products.php">Products</a>
           <a href="about.html">About Us</a>
           <a href="contact.html">Contact</a>
         </div>
