--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="index.html">
       <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
       <div class="search-center">
-      <form class="search-form" action="products.html" method="get">
+      <form class="search-form" action="products.php" method="get">
   <input type="text" name="search" placeholder="Welcome To BakeEase" />
   <button type="submit">Search</button>
 </form>
